rbac-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-namespace
