default-deny-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: secure-namespace
spec:
  podSelector: {} # matches all pods in the namespace
  policyTypes:
  - Ingress
  - Egress
